@@ -3,20 +3,20 @@ static char * t2_xpm[] = {
 "17 17 2 1",
 " 	c None",
 ".	c #000000",
-" .........       ",
-"     .           ",
-"     .           ",
-"     .           ",
-"     .           ",
-"     .           ",
-"     .           ",
-"     .           ",
 "                 ",
-"          .....  ",
-"         .     . ",
-"               . ",
-"            ...  ",
-"          ..     ",
-"         .       ",
-"         .       ",
-"         ......  "};
+"  ........       ",
+"  ........       ",
+"     ..          ",
+"     ..          ",
+"     ..          ",
+"     ..          ",
+"     ..          ",
+"         .....   ",
+"        .......  ",
+"        ..   ..  ",
+"           ...   ",
+"         ....    ",
+"        ..       ",
+"        .......  ",
+"        .......  ",
+"                 "};
